# choose-your-xml-rs

./: Cargo.toml  README.md
benches/: xml.rs
examples/: quick_xml.rs  xml5ever.rs  xmlrs.rs
